# workout_calculator

./: READMD.md  config.py  ocr_test.py
main/: CMakeLists.txt  log_parser.cpp  log_parser.h  main.cpp  main_app.cpp  main_cli.cpp  mapping.json  parsed_data.h  parser.cpp  parser.h  test_main.cpp
main/controller/: ActionHandler.cpp  ActionHandler.h
main/reprocessor/: Reprocessor.cpp  Reprocessor.h
main/reprocessor/data_processor/: DataProcessor.h
main/reprocessor/log_formatter/: LogFormatter.cpp  LogFormatter.h
main/reprocessor/log_parser/: log_parser.h
main/reprocessor/name_mapper/: name_mapper.cpp  name_mapper.h
main/reprocessor/validator/: Validator.cpp  Validator.h
test/: run_test_wc.bat  test_wc.py
test/test_cli/: main_test.py  run_test_wc.bat  test_cleanup.py  test_runner.py
workout_calculator/: CMakeLists.txt
